--- a/main.tex
+++ b/main.tex
@@ -345,7 +345,8 @@
 
 \newpage\null\thispagestyle{blank}\newpage
 
-\setcounter{tocdepth}{2}
+\setcounter{tocdepth}{3}
+\setcounter{secnumdepth}{3}
 \tableofcontents
 
 
